--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "connect-sqlite3": "^0.9.15",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
